# claims-prediction

./: .gitignore  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml  production.yml  release.yml  test.yml
claim_prediction/: config.py  inference_pipeline.py  training_pipeline.py
claim_prediction/data_processing/: load_data.py  preprocessing.py
claim_prediction/model/: evaluation.py  hyperparameter_tuning.py  inference.py  models.py  training.py
claim_prediction/output/: inference_ouput.py
claim_prediction/tests/: data_unit_test.py  integration_tests.py  test_data_preprocessing.py  test_model.py
mlruns/0/: meta.yaml
mlruns/0/3146d77fb6f44d68a3961bfc1459bcfa/: meta.yaml
mlruns/0/3146d77fb6f44d68a3961bfc1459bcfa/tags/: mlflow.source.git.commit
mlruns/0/a2af12b3e8dc470d8d0105003bb3742f/: meta.yaml
mlruns/0/a2af12b3e8dc470d8d0105003bb3742f/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
notebooks/: ML_Engineer_Task.ipynb  eda.ipynb
