[tool.poetry]
name = "claims-perdiction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
jupyter = "^1.0.0"
scipy = "^1.13.1"
shap = "^0.45.1"
xgboost = "^2.1.0"
numpy = "^2.0.0"
black = "^24.4.2"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
